--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,29 @@
 <!-- the project begins 11/04/2021 -->
+
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewrport" content=" width=device=width, initial-scale=1.0">
+    <title>30 days of CSS</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h2>
+        <span style="--i:1;">3</span>
+        <span style="--i:2;">0</span>
+        <span style="--i:4; margin-left: 5vw;">D</span>
+        <span style="--i:5;">a</span>
+        <span style="--i:6;">y</span>
+        <span style="--i:7;">s</span>
+        <span style="--i:9;margin-left: 5vw;">o</span>
+        <span style="--i:10;">f</span>
+        <span style="--i:12;margin-left: 5vw;">C</span>
+        <span style="--i:13;">S</span>
+        <span style="--i:14;">S</span>
+    </h2>
+</body>
+
+</html>
