--- a/Desafios/Desafio_2/Index.html
+++ b/Desafios/Desafio_2/Index.html
@@ -12,11 +12,11 @@
 <body>
     <section>
         <div class="container">
-            <img src="lua.jpg" id="bg">
-            <img src="bats2.png" id="bats">
-            <img src="wolf.png" id="wolf">
-            <img src="punpkin.png" id="punpkin">
-            <img src="witch.png" id="witch">
+            <img src="C:\Users\casag\Desktop\30_Dias_Css\Desafios\Desafio_2\image\bg.jpg" id="bg">
+            <img src="C:\Users\casag\Desktop\30_Dias_Css\Desafios\Desafio_2\image\bats2.png" id="bats">
+            <img src="C:\Users\casag\Desktop\30_Dias_Css\Desafios\Desafio_2\image\wolf.png" id="wolf">
+            <img src="C:\Users\casag\Desktop\30_Dias_Css\Desafios\Desafio_2\image\punpkin.png" id="punpkin">
+            <img src="C:\Users\casag\Desktop\30_Dias_Css\Desafios\Desafio_2\image\witch.png" id="witch">
         </div>
 
     </section>
