att ReadMe and ico

--- a/Desafios/Desafio_1/Index.html
+++ b/Desafios/Desafio_1/Index.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewrport" content=" width=device=width, initial-scale=1.0">
+    <link rel="icon" href="among.ico" type="image-x/icon">
+    <!-- this is a meta to indicate a how this page can be see. -->
     <title>30 days of CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
