--- a/Desafios/Desafio_3/index.html
+++ b/Desafios/Desafio_3/index.html
@@ -9,6 +9,7 @@
     <title> Login Form </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <!-- This is a library for fonts -->
     <link rel="icon" href="C:\Users\casag\Desktop\30_Dias_Css\Desafios\Desafio_3\image\mainPage.ico">
 
 
@@ -16,6 +17,7 @@
 
 <body>
     <form action="#" class="login-form">
+        <!-- form action is to send user data to anywhere -->
         <h1>Sing In</h1>
         <div class="textb">
             <input type="text" required>
@@ -26,6 +28,7 @@
             <input type="password" required>
             <div class="placeholder">Password</div>
             <div class="show-password fas fa-eye-slash"></div>
+            <!-- here is how a library works -->
         </div>
 
         <div class="checkbox">
@@ -35,6 +38,7 @@
         </div>
 
         <button class="btn fas fa-arrow-right" disabled></button>
+        <!-- trasform the button in arrow -->
 
         <a href="#">Can't Sing in ?</a>
         <a href="#">Create Account</a>
