--- a/Desafios/Desafio_3/index.html
+++ b/Desafios/Desafio_3/index.html
@@ -18,7 +18,7 @@
 <body>
     <form action="#" class="login-form">
         <!-- form action is to send user data to anywhere -->
-        <h1>Sing In</h1>
+        <h1>Sign In</h1>
         <div class="textb">
             <input type="text" required>
             <div class="placeholder">Username</div>
